--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         #main-content .main-content-subheading {
             color: white;
             font-weight: normal;
+            padding: 24px;
         }
 
         #main-content .main-content-subheading .logo-font {
@@ -166,7 +167,7 @@
             <!-- Page Subheading -->
             <div class="main-content-subheading">
                 <p class="text-block-subheading logo-font">Hi, I'm Izzy</p>
-                <p class="text-block-subheading">I'm a multidisciplinary artist, art teacher and community practitioner, based in West Yorkshire.</p>
+                <p class="text-block-subheading">I'm a multidisciplinary artist, art teacher and community practitioner based in West Yorkshire.</p>
             </div>
 
             <div class="main-content-body">
@@ -295,8 +296,9 @@
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
+            <span style="display: block; margin-top: 20px;">&copy; Izzy Sempill</span>
         </div>
 
     </div>
