--- a/updates.html
+++ b/updates.html
@@ -141,10 +141,10 @@
 
                 <!-- Into the Light Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
-                    <p class="text-block-heading" style="margin-top: 0;">Into the Light</p>
+                    <p class="text-block-subheading" style="margin-top: 0;">Into the Light</p>
                     <p class="text-block-subheading">Platform One Gallery, Todmorden</p>     
                     <p class="text-block-subheading">March - April 2025</p>                        
-                    <p class="text-block-content">Recently I have been working with texture paste and watercolour on wood boards. Three pieces have been included in Platform One Gallery’s open exhibition, Into the Light, which celebrates and welcomes the Spring. The pink/orange piece is inspired by sunset skies, and the two landscapes aim to capture the ever-changing light in the beautiful Calder Valley.</p>
+                    <p class="text-block-content">Recently I have been working with texture paste and watercolour on wood boards. Three of my pieces have been included in Platform One Gallery’s open exhibition, Into the Light, which celebrates and welcomes the Spring. The pink/orange piece is inspired by sunset skies, and the two landscapes aim to capture the ever-changing light in the beautiful Calder Valley.</p>
                     <p class="text-block-content">More images coming soon!</p>
                 </div>
 
@@ -168,14 +168,14 @@
 
                 <!-- Coming Soon Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
-                    <p class="text-block-heading" style="margin-top: 0;">Coming soon</p>                      
+                    <p class="text-block-subheading" style="margin-top: 0;">Coming soon</p>                      
                     <p class="text-block-content">Works in progress: a collection of original textured artworks will be available to buy on my site soon. Watch this space!</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
                 <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
-                    <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
                     <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
                     <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
                 </div>
 
@@ -192,10 +192,10 @@
 
                 <!-- Blackburn Open Exhibition Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
-                    <p class="text-block-heading" style="margin-top: 0;">Blackburn Open Exhibition</p>
+                    <p class="text-block-subheading" style="margin-top: 0;">Blackburn Open Exhibition</p>
                     <p class="text-block-subheading">Blackburn Museum & Art Gallery</p>     
                     <p class="text-block-subheading">Jan - March 2025</p>                        
-                    <p class="text-block-content">My acrylic painting of my Nan's living room was included in the BM&AG 2025 Open Exhibition. This scene is special to me because her house has been such a stable and consistent place throughout my life, but I also think it's a familiar and comforting scene that many people can recognise or identify with in their own ways.</p>
+                    <p class="text-block-content">My acrylic painting of my Nan's living room was included in the BM&AG 2025 Open Exhibition. This piece is special to me because her house has been such a stable and consistent place throughout my life, but I also think it's a familiar and comforting scene that many people can recognise or identify with in their own ways.</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
@@ -219,7 +219,7 @@
 
                 <!-- Postcard Art Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
-                    <p class="text-block-heading" style="margin-top: 0;">Postcard Art</p>
+                    <p class="text-block-subheading" style="margin-top: 0;">Postcard Art</p>
                     <p class="text-block-subheading">Water Street Gallery, Todmorden</p>     
                     <p class="text-block-subheading">Nov 2024 - March 2025</p>                        
                     <p class="text-block-content">I created two emulsion transfers of wintery scenes for the Postcard Art call-out at Water Street Gallery. These were displayed alongside larger pieces from the Seeds of Change exhibition.</p>
@@ -257,8 +257,9 @@
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
+            <span style="display: block; margin-top: 20px;">&copy; Izzy Sempill</span>
         </div>
 
     </div>
