--- a/original-pieces.html
+++ b/original-pieces.html
@@ -187,8 +187,9 @@
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
+            <span style="display: block; margin-top: 20px;">&copy; Izzy Sempill</span>
         </div>
 
     </div>
