--- a/updates.html
+++ b/updates.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main.js"></script>
     <title>Izzy Sempill</title>
 
