--- a/printshop.html
+++ b/printshop.html
@@ -18,6 +18,12 @@
             background-image: url('assets/images/headers/cover-print-shop.jpg');
         }
 
+        @media screen and (max-width: 780px) {
+            #main-content .main-content-header .bg-image {
+                background-image: url('assets/images/headers/cover-collage-2.jpg');
+            }
+        }
+
         #main-content  .main-content-subheading table {
             margin: 0 auto;
         }
@@ -601,7 +607,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; Izzy Sempill</span>
+            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
