--- a/product/woman-portrait.html
+++ b/product/woman-portrait.html
@@ -394,7 +394,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; Izzy Sempill</span>
+            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
