--- a/cart.html
+++ b/cart.html
@@ -165,6 +165,16 @@
     </style>
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N0HJ9SJ581"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-N0HJ9SJ581');
+</script>
+
 <body>
     
     <!-- Side Bar -->
