--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
             <span class="burger-menu" onclick="openSidebar()">
-                <img src="assets/icons/burger-menu.svg" height="24">
+                <img src="/assets/icons/burger-menu.svg" height="24">
             </span>
             <span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
@@ -245,7 +245,7 @@
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Community practitioner</p>
                     <p class="text-block-content">I'm actively broadening my practice to engage with local communities - something I've always wanted to do. My focus is facilitating and co-curating art projects that represent participants’ experiences and promote positive social change.</p>
-                    <p class="text-block-content">If you are interested in collaborating on community or family projects, please get in touch!</p>
+                    <p class="text-block-content">If you are interested in collaborating on community or family projects, <a href="/contact" style="color: inherit;">please get in touch.</a></p>
                 </div>
 
                 <div class="divider"></div>
