--- a/updates.html
+++ b/updates.html
@@ -122,7 +122,7 @@
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
             <span class="burger-menu" onclick="openSidebar()">
-                <img src="assets/icons/burger-menu.svg" height="24">
+                <img src="/assets/icons/burger-menu.svg" height="24">
             </span>
             <span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
@@ -150,13 +150,46 @@
 
             <div class="main-content-body">
 
+				<!-- Fine Art -->
+                <div class="content-element text-block" style="padding-top:24px">
+                    <p class="text-block-subheading" style="margin-top: 0;">Workshops with BA Fine Art Students</p>
+                    <p class="text-block-subheading">University of Salford</p>     
+                    <p class="text-block-subheading">March 2025</p>                        
+                    <p class="text-block-content">I ran two workshops with BA Fine Art students at the University of Salford. The participants were invited to bring their unwanted artwork (e.g. testers, or a piece they'd given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and "pressure to produce" we can feel when making art / studying at uni / more generally in our day to day lives. The feedback from the sessions was really positive.</p>
+                </div>
+
+                <!-- Additional Images (Default Screens) -->
+                <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_1.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_2.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_3.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_4.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_5.jpg"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_6.jpg"></div>
+                </div>
+
+                <!-- Additional Images (Mobile) -->
+                <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+                    <div class="scroll-wrapper">
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_1.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_2.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_3.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_4.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_5.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_6.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_7.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_8.jpg"></div>
+                    </div>
+                </div>
+
+                <div class="divider"></div>
+
                 <!-- Into the Light Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
                     <p class="text-block-subheading" style="margin-top: 0;">Into the Light</p>
                     <p class="text-block-subheading">Platform One Gallery, Todmorden</p>     
                     <p class="text-block-subheading">March - April 2025</p>                        
-                    <p class="text-block-content">Recently I have been working with texture paste and watercolour on wood boards. Three of my pieces have been included in Platform One Gallery’s open exhibition, Into the Light, which celebrates and welcomes the Spring. The pink/orange piece is inspired by sunset skies, and the two landscapes aim to capture the ever-changing light in the beautiful Calder Valley.</p>
-                    <p class="text-block-content">More images coming soon!</p>
+                    <p class="text-block-content">Three of my texture paste pieces have been included in Platform One Gallery's open exhibition, Into the Light, which welcomes and celebrates the Spring. The pink/orange piece is inspired by sunset skies, and the two landscapes aim to capture the ever-changing light in the beautiful Calder Valley.</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
@@ -172,6 +205,8 @@
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p1.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p2.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p3.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p5.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p4.jpg"></div>
                     </div>
                 </div>
 
@@ -180,7 +215,7 @@
                 <!-- Coming Soon Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
                     <p class="text-block-subheading" style="margin-top: 0;">Coming soon</p>                      
-                    <p class="text-block-content">Works in progress: a collection of original textured artworks will be available to buy on my site soon. Watch this space!</p>
+                    <p class="text-block-content">I started experimenting with texture paste last year. More recently, I have been using it with watercolour on wood boards. These materials allow me to create a sense of movement and energy - particularly with the blue tones, which are reminiscent of crashing waves. I'm really enjoying the process and will continue to develop this series.</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
@@ -193,8 +228,8 @@
                 <!-- Additional Images (Mobile) -->
                 <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
                     <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
                     </div>
                 </div>
@@ -211,18 +246,18 @@
 
                 <!-- Additional Images (Default Screens) -->
                 <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
-                    <div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
                     <div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_2.png"></div>
-                    <div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_4.png"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
+                    <div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_3.png"></div>
                 </div>
 
                 <!-- Additional Images (Mobile) -->
                 <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
                     <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_2.png"></div>
+                        <div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_3.png"></div>
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_4.png"></div>
+                        <!--<div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_4.png"></div>-->
                     </div>
                 </div>
 
@@ -232,7 +267,7 @@
                 <div class="content-element text-block" style="padding-top:24px">
                     <p class="text-block-subheading" style="margin-top: 0;">Postcard Art</p>
                     <p class="text-block-subheading">Water Street Gallery, Todmorden</p>     
-                    <p class="text-block-subheading">Nov 2024 - March 2025</p>                        
+                    <p class="text-block-subheading">Nov 2024 - Jan 2025</p>                        
                     <p class="text-block-content">I created two emulsion transfers of wintery scenes for the Postcard Art call-out at Water Street Gallery. These were displayed alongside larger pieces from the Seeds of Change exhibition.</p>
                     <p class="text-block-content">I love postcard-sized art because it's accessible, affordable and welcomes a broad range of styles and mediums.</p>
                     <p class="text-block-content">Emulsion transfers can have an ethereal, worn quality to them. For me, they show how photographs can represent faded memories. I think transfers work well as small-scale pieces because, when leaning in and looking closely, viewers will notice the layers, marks and textures created naturally through the process.</p>
