--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
                 <div class="content-element text-block">
                     <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">My work spans a range of mediums because I find so much joy in experimention. I start by exploring the properties and possibilities of different materials - often with minimal planning involved - then gradually refine my process until I reach a result I'm happy with.</p>
-                    <p class="text-block-content">On this site, you'll find prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works in progress, so there's more to come!</p>
+                    <p class="text-block-content">I work across various mediums, driven by my love for experimentation. My process begins with exploring the unique properties and potential of different materials, followed by gradual refinement. For me, art is a calming and grounding practice that helps me establish a sense of place.</p>
+                    <p class="text-block-content">On this site, you'll find prints of my collages, life drawings and mixed media pieces. I'll also provide regular updates about my practice. I have various works and projects in progress, so there's more to come!</p>
                 </div>
                
                 <div class="divider"></div>
