--- a/updates.html
+++ b/updates.html
@@ -155,7 +155,8 @@
                     <p class="text-block-subheading" style="margin-top: 0;">Workshops with BA Fine Art Students</p>
                     <p class="text-block-subheading">University of Salford</p>     
                     <p class="text-block-subheading">March 2025</p>                        
-                    <p class="text-block-content">I ran two workshops with BA Fine Art students at the University of Salford. The participants were invited to bring their unwanted artwork (e.g. testers, or a piece they'd given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and "pressure to produce" we can feel when making art / studying at uni / more generally in our day to day lives. The feedback from the sessions was really positive.</p>
+                    <p class="text-block-content">Participants were invited to bring their unwanted art (e.g. testers, or a piece they'd previously given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and 'pressure to produce' we can feel when making art, studying at uni, and more generally in our day to day lives.</p>
+                    <p class="text-block-content">The workshops were very well-received. Participant feedback: “I feel much more awake now and my mood has lifted. It has been great to create work without worrying about the outcome. I'd like a longer session - it was so fun!”</p>
                 </div>
 
                 <!-- Additional Images (Default Screens) -->
@@ -184,6 +185,30 @@
 
                 <div class="divider"></div>
 
+				<!-- Work in progress -->
+				<div class="content-element text-block" style="padding-top:24px">
+					<p class="text-block-subheading" style="margin-top: 0;">Work in progress</p>                      
+					<p class="text-block-content">I started experimenting with texture paste last year. More recently, I have been using it with watercolour on wood boards. These materials allow me to create a sense of movement and energy - particularly with the blue tones, which are reminiscent of crashing waves. I'm really enjoying the process and will continue to develop this series.</p>
+				</div>
+
+				<!-- Additional Images (Default Screens) -->
+				<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+					<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
+					<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
+					<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
+				</div>
+
+				<!-- Additional Images (Mobile) -->
+				<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+					<div class="scroll-wrapper">
+						<div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
+						<div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
+						<div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
+					</div>
+				</div>
+
+				<div class="divider"></div>
+
                 <!-- Into the Light Intro -->
                 <div class="content-element text-block" style="padding-top:24px">
                     <p class="text-block-subheading" style="margin-top: 0;">Into the Light</p>
@@ -207,30 +232,6 @@
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p3.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p5.jpg"></div>
                         <div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p4.jpg"></div>
-                    </div>
-                </div>
-
-                <div class="divider"></div>
-
-                <!-- Coming Soon Intro -->
-                <div class="content-element text-block" style="padding-top:24px">
-                    <p class="text-block-subheading" style="margin-top: 0;">Coming soon</p>                      
-                    <p class="text-block-content">I started experimenting with texture paste last year. More recently, I have been using it with watercolour on wood boards. These materials allow me to create a sense of movement and energy - particularly with the blue tones, which are reminiscent of crashing waves. I'm really enjoying the process and will continue to develop this series.</p>
-                </div>
-
-                <!-- Additional Images (Default Screens) -->
-                <div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
-                    <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
-                    <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
-                    <div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
-                </div>
-
-                <!-- Additional Images (Mobile) -->
-                <div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
-                    <div class="scroll-wrapper">
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
-                        <div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
                     </div>
                 </div>
 
